<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/navigation_listaBrecho"
            android:icon="@drawable/ic_store"
            android:title="@string/menu_brecho" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_create_pencil"
            android:title="@string/menu_cadBrecho" />
        <item
            android:id="@+id/perfilFragment"
            android:icon="@drawable/ic_person_account"
            android:title="@string/nav_perfil"
            />
        <item
            android:id="@+id/meusBrechos"
            android:icon="@drawable/ic_store"
            android:title="@string/Meus_Brecho"
            />
    </group>
</menu>