<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cad_constraint"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity"
    >

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cadastre-se"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cad_img_logo" />


            <ImageView
                android:id="@+id/cad_img_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cad_edit_user"
                style="@style/cad_img_logo"
                />

            <EditText
                android:id="@+id/cad_edit_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toTopOf="@id/cad_edit_pass"
                style="@style/cad_edit_text_user"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_editext"
                />

            <EditText
                android:id="@+id/cad_edit_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cad_edit_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                style="@style/cad_edit_text_pass"
                android:background="@drawable/bg_editext"
                />

            <EditText
                android:id="@+id/cad_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cad_edit_pass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/cad_edit_text_email"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_editext"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cad_btn_cadastro"
                style="cad_btn_cad"
                android:layout_width="175dp"
                android:layout_height="55dp"
                android:background="@drawable/bg_btn_log"
                android:hint="@string/cad_btn_cad"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cad_edit_email" />



            <TextView
                android:id="@+id/cad_tv1"
                style="@style/cad_havelogin1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/have_acount"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cad_tv2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cad_btn_cadastro"
                />

            <TextView
                android:id="@+id/cad_tv2"
                style="@style/cad_havelogin2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/have_acount2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cad_tv1"
                app:layout_constraintTop_toBottomOf="@id/cad_btn_cadastro"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>